# inazuma

./: .babelrc  .dependency-cruiser.cjs  .editorconfig  .eslintrc.js  .gitignore  .npmrc  .prettierignore  CLAUDE.md  LICENSE  REACT_QUERY_USAGE.md  README.md  biome.json  electron-builder.yaml  eslint.config.mjs  format.js  gulpfile.js  package-lock.json  package.json  prettier-vue.js  renovate.json  tailwind.config.js  tsconfig.depcruise.json  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.browser.js  webpack.config.js  webpack.config.renderer.js  webpack.config.style.js
.claude/: settings.json
.github/workflows/: build.yml
doc/internal/: GENERATE_BINDINGS.md  PROJECT_OVERVIEW.md  TAURI_COMMANDS.md
fonts/: LICENSE
src/: commonTypes.d.ts  grapher.ts  ipc-promise.d.ts  navigate.ts  remote.d.ts  types.ts
src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json  vite.config.ts
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: migrated.json
src-tauri/app/src/: avatar_protocol_handler.rs  commands.rs  custom_command.rs  fs_watcher.rs  git.rs  lib.rs  main.rs  platform.rs  pty.rs  state.rs  static_protocol_handler.rs  sync.rs
src-tauri/app/src/git/: blame.rs  branch.rs  commit_detail.rs  config.rs  diff.rs  external_diff.rs  file.rs  index.rs  log.rs  lstree.rs  refs.rs  remote.rs  reset.rs  status.rs  switch.rs  workingtree.rs
src-tauri/app/src/state/: avatars.rs  config.rs  env.rs  pty.rs  repo_config.rs  repositories.rs  stager.rs
src-tauri/examples/: generate_schema.rs
src-tauri/frontend/: index.html  tauri-command-types.ts  tsconfig.json
src-tauri/generate/: Cargo.toml
src-tauri/generate/bindings/: TsArg.ts  TsFunc.ts  TsType.ts
src-tauri/generate/src/: invoke_type.rs  main.rs  translate_func.rs
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  pty.rs  state.rs  types.rs
src-tauri/src/git/: blame.rs  commit.rs  commit_detail.rs  diff.rs  external_diff.rs  file.rs  log.rs  lstree.rs  merge_heads.rs  refs.rs  rev_parse.rs  status.rs
src-tauri/src/state/: config.rs  env.rs  repositories.rs
src-tauri/types/: Cargo.toml
src-tauri/types/src/: lib.rs
src/browser/: actions.ts  blame.ts  file.ts  git.ts  main.ts  menus.ts  nodegit.d.ts  options.ts  persistent.ts  persistentData.ts  pty.ts  registerHandlers.ts  remote.ts  repositorySession.ts  status.ts  tempdir.ts  tsconfig.json  utils.ts  webpack.config.js  windowManager.ts
src/browser/git/: blame.ts  diff.ts  exec.ts  file.ts  function.ts  index.ts  log.ts  lstree.ts  process.ts  refs.ts  status.ts
src/browser/handlers/: index.ts  openRepository.ts  showExternalDiff.ts
src/browser/preload/: preload.ts
src/react/: browserApi.ts  cssvar.ts  date.ts  dispatchBrowser.ts  fileicon.ts  filestatus.ts  grapher.ts  index.css  index.html  index.tsx  install-polyfill.ts  invokeTauriCommand.ts  jotai-devtools-styles.ts  overlay.ts  persistData.ts  strings.ts  tree.ts  tsconfig.json  util.ts
src/react/commands/: browseSourceTree.ts  copyHash.ts  copyRelativePath.ts  createBranch.ts  diff.ts  index.ts  reset.ts  showFileContent.ts  staging.ts  types.d.ts  workingtree.ts
src/react/components/: AboutDialog.tsx  Alert.tsx  CommandGroup.tsx  ConfirmDialog.tsx  ConnectedConfirmDialog.tsx  Dialog.tsx  DialogBody.tsx  FlexCard.tsx  FullscreenDialog.tsx  GitHash.tsx  Icon.tsx  InteractiveShell.tsx  KeyDownTrapper.tsx  KeyboardSelection.tsx  LazyTooltip.tsx  Loading.tsx  MainWindow.tsx  MonacoDiffEditor.tsx  MonacoEditor.tsx  PersistSplitterPanel.tsx  PreferenceDialog.tsx  Splitter.tsx  SplitterPanel.tsx  TabContainer.tsx  VirtualList.tsx  VirtualTree.tsx  VirtualTreeReducer.ts  XtermDialogBody.tsx  lazyWithPreload.ts
src/react/context/: AlertContext.tsx  CommandGroupContext.tsx  ConfirmDialogContext.tsx  ContextMenuContext.tsx  DialogContext.tsx  HotKeyContext.tsx  LoadingContext.tsx  PersistStateContext.tsx  SelectedIndexContext.tsx
src/react/hooks/: useAlert.ts  useBlame.ts  useBrowserProcess.ts  useCallbackWithErrorHandler.ts  useCommandGroup.ts  useConfirmDialog.ts  useContextMenu.ts  useContextMenu.tsx  useCustomCommands.ts  useDragAndDropReorder.ts  useElementSize.ts  useFixup.tsx  useIndexNavigator.ts  useItemBasedListItemSelector.ts  useListIndex.ts  useListIndexChanger.ts  useListIndexOfItem.ts  useListItemSelector.ts  usePersistState.ts  useSelectedIndex.ts  useStateWithRef.ts  useTauriQuery.ts  useTreeIndexChanger.ts  useTreeItemSelector.ts  useTreeModel.ts  useTreeNavigator.ts  useWithRef.ts  useXterm.ts  useXtermDialog.tsx
src/react/monaco/: index.ts  types.d.ts
src/react/state/: dialog.ts  misc.ts  persist.ts  repository.ts  root.ts  rootStore.ts  tabs.ts  util.ts
src/react/store/: config.ts  confirmDialog.ts  index.ts  misc.ts  persist.ts  repository.ts
src/react/types/: IconName.d.ts  jsx.d.ts  material-ui.d.ts  preact-inject.d.ts  tauri-types.d.ts  types.d.ts
src/renderer/: browser.ts  browserActions.ts  css-literal-loader.d.ts  lib.d.ts  main.ts  monaco-global.d.ts  rendererTypes.d.ts  route.ts  simple-pug-loader.js  tsconfig.json  utils.ts  vue-composition-api.d.ts  vue-extend.d.ts  vue-material.d.ts  vue-monaco.d.ts  vue-persist.d.ts  vue-resizesensor.d.ts  vue-sfc.d.ts  vue-support-types.d.ts  vue-support.d.ts  webpack.config.js
src/renderer/components/: commitDetail.pug  commitDetail.scss  commitDetail.ts  graphCell.pug  graphCell.ts  logView.pug  logView.ts  (+8 more)
src/rust-backend/: index.d.ts  index.js  package.json
src/rust-backend/native/: Cargo.toml
src/rust-backend/native/src/: bridge.rs  git.rs  lib.rs
src/rust-backend/native/src/bridge/: blame.rs  commit.rs  commit_detail.rs  diff.rs  file.rs  find_repository_root.rs  index.rs  js_object_extension.rs  log.rs  lstree.rs  refs.rs  status.rs
src/rust-backend/native/src/git/: blame.rs  commit.rs  commit_detail.rs  diff.rs  file.rs  index.rs  log.rs  lstree.rs  merge_heads.rs  refs.rs  rev_parse.rs  status.rs  types.rs
static/: application.css  index.html
style/: _mdc.scss  _mdl-custom.scss  _vue-material.scss  application.scss  font.css  main.js  scrollbar.scss
(+503 files in other folders)
