[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies.types]
path = "../types"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.5", features = ["clipboard", "dialog"] }
thiserror = "1.0"
schemars = "0.8"
tokio = { version = "1.17", features = ["full"] }
regex = "1.5"
base64 = "0.13"
sha1_smol = { version = "1.0", features = ["std"] }
portable-pty = "0.7.0"
shell-words = "1.1"
rand = "0.8"
font-kit = "0.11.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
