[package]
name = "inazuma"
version = "0.2.2"
description = "A git client"
authors = ["wonderful-panda"]
license = "MIT"
repository = "https://github.com/wonderful-panda/inazuma"
default-run = "inazuma"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies.types]
path = "../types"

[dependencies]
log = "0.4.16"
env_logger = "0.10.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.0", features = [] }
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-stream = "0.1.14"
regex = "1.5"
base64 = "0.13"
sha1_smol = { version = "1.0", features = ["std"] }
portable-pty = "0.8.1"
shell-words = "1.1"
rand = "0.8"
font-kit = "0.11.0"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
url = "2.5.2"
sha2 = "0.10.8"
tauri-plugin-http = "2.0.0-rc.0"
http = "1.1.0"
urlencoding = "2.1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
