[package]
name = "generate"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }
glob = "0.3.2"
thiserror = "1.0.69"
ts-rs = { version = "11.1.0", features = ["format"] }

[dependencies.types]
path = "../types"
