[package]
name = "types"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = { version = "11.1.0", features = ["format"] }
