[package]
name = "inazuma-rust-backend"
version = "0.1.0"
authors = ["iwata hidetaka <iwata0303@gmail.com>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "inazuma_rust_backend"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.9.1"

[dependencies]
regex = "1"
thiserror = "1.0"

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-4", "channel-api"]
